<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vraifond"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/idq"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#709800"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idan"
                    android:textColor="#709800"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/rbsgbd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ids" 
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/rbse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idsj" 
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/rblangage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idl" 
                        android:textColor="#fff" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="62dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idin"
                    android:textColor="#709800"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/rbpapk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/idpap" 
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/rbpjar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idpja" 
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/rbpwar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idpwa" 
                        android:textColor="#fff" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.09" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Les Layouts sont en :"
                    android:textColor="#709800"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"  >

                    <RadioButton
                        android:id="@+id/rbhtml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="HTML" 
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/rbjavascript"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="JAVAScript" 
                        android:textColor="#fff" />

                    <RadioButton
                        android:id="@+id/rbxml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="XML" 
                        android:textColor="#fff" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MVC est un : "
                    android:textColor="#709800"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/rbdiag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Diagramme"
                        android:textColor="#fff"  />

                    <RadioButton
                        android:id="@+id/rbmod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Modéle"
                        android:textColor="#fff"  />

                    <RadioButton
                        android:id="@+id/rborgan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Organigramme"
                        android:textColor="#fff"  />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="0.44"
                android:background="#709800"
                android:text="Score"
                android:textColor="#042a93" />

            <Button
                android:id="@+id/brejouer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.44"
                android:text="Rejouer"
                android:textColor="#042a93" 
                android:background="#709800"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Votre score est :"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tvp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="..........................."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>